@@ -671,7 +671,7 @@ struct JobUpdateSettings {
 
   /**
    * Max time to wait until an instance reaches RUNNING state.
-   * Note: Deprecated in 0.8.0.
+   * Note: Deprecated in 0.11.0.
    */
   4: i32 maxWaitToInstanceRunningMs
 
